--- a/README.Rmd
+++ b/README.Rmd
@@ -16,8 +16,7 @@ knitr::opts_chunk$set(
 # `TcGSA`
 
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/TcGSA)](https://cran.r-project.org/package=TcGSA)
-[![Travis-CI Build Status](https://travis-ci.org/borishejblum/TcGSA.svg?branch=master)](https://travis-ci.org/borishejblum/TcGSA)
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/borishejblum/TcGSA?branch=master&svg=true)](https://ci.appveyor.com/project/borishejblum/TcGSA)
+[![R-CMD-check](https://github.com/borishejblum/TcGSA/workflows/R-CMD-check/badge.svg)](https://github.com/borishejblum/TcGSA/actions)
 [![Downloads](https://cranlogs.r-pkg.org/badges/TcGSA?color=blue)](https://www.r-pkg.org/pkg/TcGSA)
 
 ## Overview
@@ -48,7 +47,7 @@ The easiest way to get `TcGSA` is to install it from [CRAN](https://cran.r-proje
 install.packages("TcGSA")
 ```
 
-or to get the development version from [GitHub](https://github.com/denisagniel/tcgsaseq):
+or to get the development version from [GitHub](https://github.com/borishejblum/TcGSA):
 ```{r GitHub-install, eval=FALSE}
 #install.packages("devtools")
 devtools::install_github("borishejblum/TcGSA")
