--- a/vignettes/TcGSA_userguide.Rmd
+++ b/vignettes/TcGSA_userguide.Rmd
@@ -28,7 +28,7 @@ The `TcGSA` (Time-course Gene Set Analysis *Hejblum et al., 2015*) `R` package t
 gene expression dynamics for significance in gene sets. A gene set is a group of genes, 
 known *a priori* to share a common biological function or to be co-expressed. `TcGSA` relies 
 on linear mixed model to take into account the potential heterogeneity of expression 
-within a gene set. For more details, check the [published article in PLOS Computational Biology](http://dx.plos.org/10.1371/journal.pcbi.1004310).
+within a gene set. For more details, check the [published article in PLOS Computational Biology](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004310).
 
 
 
@@ -86,7 +86,7 @@ you can (re-)build the `gmt` object yourself following the method below.
 ### Self-built gmt
 
 To self-build your `gmt` object, you have to prepare a `.gmt` file. This file 
-format is the tab delimited file which can be created with [this helpful website](http://software.broadinstitute.org/cancer/software/gsea/wiki/index.php/Data_formats#GMT:_Gene_Matrix_Transposed_file_format_.28.2A.gmt.29) from the Broad Institute. In this file, one row represents one gene set with:
+format is the tab delimited file which can be created with [this helpful website](https://software.broadinstitute.org/cancer/software/gsea/wiki/index.php/Data_formats#GMT:_Gene_Matrix_Transposed_file_format_.28.2A.gmt.29) from the Broad Institute. In this file, one row represents one gene set with:
 
 - Column 1: name of the gene set
 - Column 2: description of the gene set
