updated URLS + version bump for CRN resubmission

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(
 
 On top of the CRAN help pdf-file, the following article explains what TcGSA is about:
 
->Hejblum, BP, Skinner, J, & Thiébaut, R (2015). Time-Course Gene Set Analysis for Longitudinal Gene Expression Data. *PLOS Computational Biology*, **11**(6):e1004310. [<doi: 10.1371/journal.pcbi.1004310>](https://doi.org/10.1371/journal.pcbi.1004310/)
+>Hejblum, BP, Skinner, J, & Thiébaut, R (2015). Time-Course Gene Set Analysis for Longitudinal Gene Expression Data. *PLOS Computational Biology*, **11**(6):e1004310. [<doi: 10.1371/journal.pcbi.1004310>](https://doi.org/10.1371/journal.pcbi.1004310)
 
 
 
