--- a/vignettes/TcGSA_userguide.Rmd
+++ b/vignettes/TcGSA_userguide.Rmd
@@ -325,7 +325,8 @@ using longitudinal gene expression. The subjects are split into three groups of 
 individuals, each receiving either 2009-2010 seasonal influenza vaccine (Fluzone), 
 a 23-valent pneumococcal vaccine (Pneumovax23), or a placebo (saline solution).  
 Blood samples have been acquired on day -7, 0, 1, 3, 7, 10, 14, 21 and 28 to 
-study gene expression over time. For more details, check the article from *Obermoser et al.* [here](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3492754/).
+study gene expression over time. For more details, check the article from 
+*Obermoser et al.* [here](https://doi.org/10.1016/j.immuni.2012.12.008).
 
 The data is available on [GEO website](https://www.ncbi.nlm.nih.gov/geo/) under 
 the GEO access number 'GSE30101', which we will be accessing through the `GEOquery` 
@@ -338,7 +339,8 @@ package (see appendix for more details on `GEOquery`)
 Here, we download the data files and import them with `getGEO()` function:
 
 ```{r import_ober, message=FALSE, warning=FALSE}
-utils::download.file("ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE30nnn/GSE30101/soft/GSE30101_family.soft.gz", destfile = "GSE30101_family.soft.gz", mode = "wb", cacheOK = FALSE)
+utils::download.file("ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE30nnn/GSE30101/soft/GSE30101_family.soft.gz", 
+                     destfile = "GSE30101_family.soft.gz", mode = "wb", cacheOK = FALSE)
 gse.soft <- GEOquery::getGEO(filename="GSE30101_family.soft.gz")
 ```
 
